--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / IMDEA Software Institute">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;IMDEA&lt;/abbr&gt; Software Institute">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/style.css">
     <title>Michael Emmi</title>
@@ -14,7 +14,7 @@
 
         <section id="header">
           <h1 class="title">Michael Emmi</h1>
-          <div class="tagline">Researcher / IMDEA Software Institute</div>
+          <div class="tagline">Researcher / <abbr>IMDEA</abbr> Software Institute</div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
               <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
@@ -25,7 +25,7 @@
           <h2>About</h2>
           <div>
             
-<p>Michael received his Ph.D. in Computer Science from UCLA in 2010 and joined the IMDEA Software Institute in 2013, following a postdoc fellowship at the Université Paris Diderot awarded by La Fondation Sciences Mathématiques de Paris. Prior to all that, Michael completed his undergraduate studies at Binghamton University (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Université Paris Diderot, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
+<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined the <abbr>IMDEA</abbr> Software Institute in 2013, following a postdoc fellowship at the Université Paris Diderot awarded by La Fondation Sciences Mathématiques de Paris. Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Université Paris Diderot, and has held internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
 <p>Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
 
           </div>
@@ -39,7 +39,7 @@
                 <span class="place">POPL ’16</span>
               </div>
               <div class="info">
-                <a href="http://popl.mpi-sws.org/2016/">43rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+                <a href="http://popl.mpi-sws.org/2016/">43rd <abbr>ACM SIGPLAN-SIGACT</abbr> Symposium on Principles of Programming Languages</a>
               </div>
             </div>
             <div class="item">
@@ -48,7 +48,7 @@
                 <span class="place">PPoPP ’16</span>
               </div>
               <div class="info">
-                <a href="http://www.sigplan.org/Conferences/PPOPP/">21st ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a>
+                <a href="http://www.sigplan.org/Conferences/PPOPP/">21st <abbr>ACM SIGPLAN</abbr> Symposium on Principles and Practice of Parallel Programming</a>
               </div>
             </div>
             <div class="item">
@@ -66,7 +66,7 @@
                 <span class="place">POPL ’15</span>
               </div>
               <div class="info">
-                <a href="http://popl.mpi-sws.org/2015/">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+                <a href="http://popl.mpi-sws.org/2015/">42nd <abbr>ACM SIGPLAN-SIGACT</abbr> Symposium on Principles of Programming Languages</a>
               </div>
             </div>
             <div class="item">
@@ -93,7 +93,7 @@
                 <span class="place">PLDI ’14</span>
               </div>
               <div class="info">
-                <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
+                <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual <abbr>ACM SIGPLAN</abbr> Conference on Programming Language Design and Implementation</a>
               </div>
             </div>
             <div class="item">
@@ -102,7 +102,7 @@
                 <span class="place">POPL ’13</span>
               </div>
               <div class="info">
-                <a href="http://popl.mpi-sws.org/2013/">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+                <a href="http://popl.mpi-sws.org/2013/">40th <abbr>ACM SIGPLAN-SIGACT</abbr> Symposium on Principles of Programming Languages</a>
               </div>
             </div>
             <div class="item">
@@ -128,6 +128,9 @@
                 </span>
                 <span class="place">CAV ’15</span>
               </div>
+                <div class="info">
+                  tool paper
+                </div>
             </div>
             <div class="item">
               <div class="head">
@@ -148,7 +151,7 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
-                    <a href="papers/conf-tacas-HaranCELQR15.pdf">SMACK+Corral: A Modular Verifier</a>
+                    <a href="papers/conf-tacas-HaranCELQR15.pdf"><abbr>SMACK</abbr>+Corral: A Modular Verifier</a>
                 </span>
                 <span class="place">TACAS ’15</span>
               </div>
@@ -175,7 +178,7 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
-                    <a href="papers/conf-cav-RakamaricE14.pdf">SMACK: Decoupling Source Language Details from Verifier Implementations</a>
+                    <a href="papers/conf-cav-RakamaricE14.pdf"><abbr>SMACK</abbr>: Decoupling Source Language Details from Verifier Implementations</a>
                 </span>
                 <span class="place">CAV ’14</span>
               </div>
@@ -353,8 +356,8 @@
 
         <section id="contact">
           <h2>Contact</h2>
-            <div class="item">IMDEA Software Institute<br>
-Campus Montegancedo UPM<br>
+            <div class="item"><abbr>IMDEA</abbr> Software Institute<br>
+Campus Montegancedo <abbr>UPM</abbr><br>
 28223 Pozuelo de Alarcón, Madrid<br>
 España
 </div>
@@ -362,7 +365,7 @@ España
               <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a>
             </div>
               <div class="item">+34 911 012 202 (Spain)</div>
-              <div class="item">+1 (310) 564-6453 (USA)</div>
+              <div class="item">+1 (310) 564-6453 (<abbr>USA</abbr>)</div>
         </section>
 
       </div>
@@ -373,10 +376,10 @@ España
             <div class="item">
               <div class="head">
                 <span class="thing">
-                  <a href="https://github.com/smackers/smack">SMACK</a>
+                  <a href="https://github.com/smackers/smack"><abbr>SMACK</abbr></a>
                 </span>
               </div>
-              <div class="info">LLVM bitcode to Boogie translation.
+              <div class="info"><abbr>LLVM</abbr> bitcode to Boogie translation.
 </div>
             </div>
             <div class="item">
@@ -403,7 +406,7 @@ España
                   <a href="https://github.com/michael-emmi/printlncs">printlncs</a>
                 </span>
               </div>
-              <div class="info">save paper by printing every two pages of LNCS proceedings on a single page, without scaling.
+              <div class="info">save paper by printing every two pages of <abbr>LNCS</abbr> proceedings on a single page, without scaling.
 </div>
             </div>
         </section>
