--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <span class="place">TACAS ’15</span>
               </div>
                 <div class="info">
-                  competition contribution to SV-COMP 2015
+                  competition contribution to <abbr>SV-COMP</abbr> 2015
                 </div>
             </div>
             <div class="item">
