Updated SMACK description.

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                   <a href="https://github.com/smackers/smack"><abbr>SMACK</abbr></a>
                 </span>
               </div>
-              <div class="info"><abbr>LLVM</abbr> bitcode to Boogie translation.
+              <div class="info">Bounded software verifier for C programs.
 </div>
             </div>
             <div class="item">
