--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
-                    <a>Monitoring Refinement via Symbolic Reasoning</a>
+                    <a href="papers/conf-pldi-EmmiEH15.pdf">Monitoring Refinement via Symbolic Reasoning</a>
                 </span>
                 <span class="place">PLDI ’15</span>
               </div>
