Added ICALP camera-ready paper.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
-                    <a>On Reducing Linearizability to State Reachability</a>
+                    <a href="papers/conf-icalp-BouajjaniEEH15.pdf">On Reducing Linearizability to State Reachability</a>
                 </span>
                 <span class="place">ICALP ’15</span>
               </div>
@@ -368,7 +368,7 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
-                  <a href="https://github.com/imdea-software/observational-refinement-checking">Observational Refinement Checking</a>
+                  <a href="https://github.com/imdea-software/violin">Observational Refinement Checking</a>
                 </span>
               </div>
               <div class="info">algorithms for observational refinement / linearizability.
