Finished CV layout.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8'>
     <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;IMDEA&lt;/abbr&gt; Software Institute">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" media="screen" href="css/style.css">
+    <link rel="stylesheet" media="screen" href="css/common.css">
+    <link rel="stylesheet" media="screen" href="css/index.css">
     <title>Michael Emmi</title>
   </head>
 
@@ -40,7 +41,7 @@
                 <span class="rhs"><abbr>POPL</abbr> ’16</span>
               </div>
               <div class="info">
-                <a href="http://popl.mpi-sws.org/2016/">43rd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
+                <a href="http://conf.researchr.org/home/POPL-2016">43rd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
               </div>
             </div>
             <div class="item">
@@ -49,13 +50,13 @@
                 <span class="rhs"><abbr>PPoPP</abbr> ’16</span>
               </div>
               <div class="info">
-                <a href="http://www.sigplan.org/Conferences/PPOPP/">21st <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Symposium on Principles and Practice of Parallel Programming</a>
+                <a href="https://ppopp15.soe.ucsc.edu">21st <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Symposium on Principles and Practice of Parallel Programming</a>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>EC</abbr><sup>2</sup> ’15</span>
+                <span class="rhs"><abbr>EC<sup>2</sup></abbr> ’15</span>
               </div>
               <div class="info">
                 <a href="http://multicore.doc.ic.ac.uk/events/ec2/">8th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
@@ -82,7 +83,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Chair</span>
-                <span class="rhs"><abbr>EC</abbr><sup>2</sup> ’14</span>
+                <span class="rhs"><abbr>EC<sup>2</sup></abbr> ’14</span>
               </div>
               <div class="info">
                 <a href="http://software.imdea.org/ec2-2014/">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
@@ -115,6 +116,15 @@
                 <a href="http://vmcai13.di.univr.it/">14th International Conference on Verification, Model Checking and Abstract Interpretation</a>
               </div>
             </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs"><abbr>Bytecode</abbr> ’11</span>
+              </div>
+              <div class="info">
+                <a href="http://vmcai13.di.univr.it/">6th International Workshop on Bytecode Semantics, Verification, Analysis and Transformation</a>
+              </div>
+            </div>
         </section>
 
       </div>
@@ -129,9 +139,6 @@
                 </span>
                 <span class="rhs"><abbr>CAV</abbr> ’15</span>
               </div>
-                <div class="info">
-                  tool paper
-                </div>
             </div>
             <div class="item">
               <div class="head">
@@ -156,9 +163,6 @@
                 </span>
                 <span class="rhs"><abbr>TACAS</abbr> ’15</span>
               </div>
-                <div class="info">
-                  competition contribution to <abbr>SV-COMP</abbr> 2015
-                </div>
             </div>
             <div class="item">
               <div class="head">
@@ -183,9 +187,6 @@
                 </span>
                 <span class="rhs"><abbr>CAV</abbr> ’14</span>
               </div>
-                <div class="info">
-                  tool paper
-                </div>
             </div>
             <div class="item">
               <div class="head">
@@ -363,16 +364,16 @@
                   <a href="https://github.com/smackers/smack"><abbr>SMACK</abbr></a>
                 </span>
               </div>
-              <div class="info">Bounded software verifier for C programs.
+              <div class="info"><abbr>SV-COMP ’15</abbr> award-winning bounded software verifier for C programs.
 </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                  <a href="https://github.com/imdea-software/violin">Observational Refinement Checking</a>
+                  <a href="https://github.com/imdea-software/violin">Violin</a>
                 </span>
               </div>
-              <div class="info">algorithms for observational refinement / linearizability.
+              <div class="info">efficient algorithms for checking observational refinement.
 </div>
             </div>
             <div class="item">
@@ -381,7 +382,7 @@
                   <a href="https://github.com/michael-emmi/c2s">c2s</a>
                 </span>
               </div>
-              <div class="info">concurrent to sequential program translations.
+              <div class="info">concurrent to sequential program translations (sequentializations).
 </div>
             </div>
             <div class="item">
