Style for printing.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset='utf-8'>
     <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;IMDEA&lt;/abbr&gt; Software Institute">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" media="screen" href="css/common.css">
-    <link rel="stylesheet" media="screen" href="css/index.css">
+    <link rel="stylesheet" media="screen" href="css/screen.css">
+    <link rel="stylesheet" media="print" href="css/print.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Michael Emmi</title>
   </head>
 
@@ -38,7 +39,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>POPL</abbr> ’16</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’16</span>
               </div>
               <div class="info">
                 <a href="http://conf.researchr.org/home/POPL-2016">43rd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
@@ -47,7 +48,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>PPoPP</abbr> ’16</span>
+                <span class="rhs"><abbr>PPoPP</abbr>&nbsp;’16</span>
               </div>
               <div class="info">
                 <a href="https://ppopp15.soe.ucsc.edu">21st <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Symposium on Principles and Practice of Parallel Programming</a>
@@ -56,7 +57,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>EC<sup>2</sup></abbr> ’15</span>
+                <span class="rhs"><abbr>EC<sup>2</sup></abbr>&nbsp;’15</span>
               </div>
               <div class="info">
                 <a href="http://multicore.doc.ic.ac.uk/events/ec2/">8th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
@@ -65,7 +66,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>POPL</abbr> ’15</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’15</span>
               </div>
               <div class="info">
                 <a href="http://popl.mpi-sws.org/2015/">42nd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
@@ -74,7 +75,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>FM</abbr> ’15</span>
+                <span class="rhs"><abbr>FM</abbr>&nbsp;’15</span>
               </div>
               <div class="info">
                 <a href="http://fm2015.ifi.uio.no">20th International Symposium on Formal Methods</a>
@@ -83,7 +84,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Chair</span>
-                <span class="rhs"><abbr>EC<sup>2</sup></abbr> ’14</span>
+                <span class="rhs"><abbr>EC<sup>2</sup></abbr>&nbsp;’14</span>
               </div>
               <div class="info">
                 <a href="http://software.imdea.org/ec2-2014/">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
@@ -92,7 +93,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>PLDI</abbr> ’14</span>
+                <span class="rhs"><abbr>PLDI</abbr>&nbsp;’14</span>
               </div>
               <div class="info">
                 <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Conference on Programming Language Design and Implementation</a>
@@ -101,7 +102,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>POPL</abbr> ’13</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’13</span>
               </div>
               <div class="info">
                 <a href="http://popl.mpi-sws.org/2013/">40th <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
@@ -110,7 +111,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>VMCAI</abbr> ’13</span>
+                <span class="rhs"><abbr>VMCAI</abbr>&nbsp;’13</span>
               </div>
               <div class="info">
                 <a href="http://vmcai13.di.univr.it/">14th International Conference on Verification, Model Checking and Abstract Interpretation</a>
@@ -119,7 +120,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>Bytecode</abbr> ’11</span>
+                <span class="rhs"><abbr>Bytecode</abbr>&nbsp;’11</span>
               </div>
               <div class="info">
                 <a href="http://vmcai13.di.univr.it/">6th International Workshop on Bytecode Semantics, Verification, Analysis and Transformation</a>
@@ -137,7 +138,7 @@
                 <span class="lhs">
                     <a>Systematic Asynchrony Bug Exploration for Android Apps</a>
                 </span>
-                <span class="rhs"><abbr>CAV</abbr> ’15</span>
+                <span class="rhs"><abbr>CAV</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
@@ -145,7 +146,7 @@
                 <span class="lhs">
                     <a href="papers/conf-icalp-BouajjaniEEH15.pdf">On Reducing Linearizability to State Reachability</a>
                 </span>
-                <span class="rhs"><abbr>ICALP</abbr> ’15</span>
+                <span class="rhs"><abbr>ICALP</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
@@ -153,7 +154,7 @@
                 <span class="lhs">
                     <a href="papers/conf-pldi-EmmiEH15.pdf">Monitoring Refinement via Symbolic Reasoning</a>
                 </span>
-                <span class="rhs"><abbr>PLDI</abbr> ’15</span>
+                <span class="rhs"><abbr>PLDI</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
@@ -161,7 +162,7 @@
                 <span class="lhs">
                     <a href="papers/conf-tacas-HaranCELQR15.pdf"><abbr>SMACK</abbr>+Corral: A Modular Verifier</a>
                 </span>
-                <span class="rhs"><abbr>TACAS</abbr> ’15</span>
+                <span class="rhs"><abbr>TACAS</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
@@ -169,7 +170,7 @@
                 <span class="lhs">
                     <a href="papers/conf-esop-EmmiGMR15.pdf">Analysis of Asynchronous Programs with Event-Based Synchronization</a>
                 </span>
-                <span class="rhs"><abbr>ESOP</abbr> ’15</span>
+                <span class="rhs"><abbr>ESOP</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
@@ -177,7 +178,7 @@
                 <span class="lhs">
                     <a href="papers/conf-popl-BouajjaniEEH15.pdf">Tractable Refinement Checking for Concurrent Objects</a>
                 </span>
-                <span class="rhs"><abbr>POPL</abbr> ’15</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
@@ -185,7 +186,7 @@
                 <span class="lhs">
                     <a href="papers/conf-cav-RakamaricE14.pdf"><abbr>SMACK</abbr>: Decoupling Source Language Details from Verifier Implementations</a>
                 </span>
-                <span class="rhs"><abbr>CAV</abbr> ’14</span>
+                <span class="rhs"><abbr>CAV</abbr>&nbsp;’14</span>
               </div>
             </div>
             <div class="item">
@@ -193,7 +194,7 @@
                 <span class="lhs">
                     <a href="papers/conf-spin-EmmiOT14.pdf">Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs</a>
                 </span>
-                <span class="rhs"><abbr>SPIN</abbr> ’14</span>
+                <span class="rhs"><abbr>SPIN</abbr>&nbsp;’14</span>
               </div>
             </div>
             <div class="item">
@@ -201,7 +202,7 @@
                 <span class="lhs">
                     <a href="papers/journals-sttt-BouajjaniE14.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
                 </span>
-                <span class="rhs"><abbr>STTT</abbr> ’14</span>
+                <span class="rhs"><abbr>STTT</abbr>&nbsp;’14</span>
               </div>
             </div>
             <div class="item">
@@ -209,7 +210,7 @@
                 <span class="lhs">
                     <a href="papers/conf-esop-BouajjaniEEH13.pdf">Verifying Concurrent Programs Against Sequential Specifications</a>
                 </span>
-                <span class="rhs"><abbr>ESOP</abbr> ’13</span>
+                <span class="rhs"><abbr>ESOP</abbr>&nbsp;’13</span>
               </div>
             </div>
             <div class="item">
@@ -217,7 +218,7 @@
                 <span class="lhs">
                     <a href="papers/journals-toplas-BouajjaniE13.pdf">Analysis of Recursively Parallel Programs</a>
                 </span>
-                <span class="rhs"><abbr>TOPLAS</abbr> ’13</span>
+                <span class="rhs"><abbr>TOPLAS</abbr>&nbsp;’13</span>
               </div>
             </div>
             <div class="item">
@@ -225,7 +226,7 @@
                 <span class="lhs">
                     <a href="papers/conf-fse-EmmiLQ12.pdf">Asynchronous Programs with Prioritized Task-Buffers</a>
                 </span>
-                <span class="rhs"><abbr>FSE</abbr> ’12</span>
+                <span class="rhs"><abbr>FSE</abbr>&nbsp;’12</span>
               </div>
             </div>
             <div class="item">
@@ -233,7 +234,7 @@
                 <span class="lhs">
                     <a href="papers/conf-sas-EmmiL12.pdf">Finding Non-Terminating Executions in Distributed Asynchronous Programs</a>
                 </span>
-                <span class="rhs"><abbr>SAS</abbr> ’12</span>
+                <span class="rhs"><abbr>SAS</abbr>&nbsp;’12</span>
               </div>
             </div>
             <div class="item">
@@ -241,7 +242,7 @@
                 <span class="lhs">
                     <a href="papers/conf-cav-AtigBEL12.pdf">Detecting Fair Non-Termination in Multithreaded Programs</a>
                 </span>
-                <span class="rhs"><abbr>CAV</abbr> ’12</span>
+                <span class="rhs"><abbr>CAV</abbr>&nbsp;’12</span>
               </div>
             </div>
             <div class="item">
@@ -249,7 +250,7 @@
                 <span class="lhs">
                     <a href="papers/conf-tacas-BouajjaniE12.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
                 </span>
-                <span class="rhs"><abbr>TACAS</abbr> ’12</span>
+                <span class="rhs"><abbr>TACAS</abbr>&nbsp;’12</span>
               </div>
             </div>
             <div class="item">
@@ -257,7 +258,7 @@
                 <span class="lhs">
                     <a href="papers/conf-popl-BouajjaniE12.pdf">Analysis of Recursively Parallel Programs</a>
                 </span>
-                <span class="rhs"><abbr>POPL</abbr> ’12</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’12</span>
               </div>
             </div>
             <div class="item">
@@ -265,7 +266,7 @@
                 <span class="lhs">
                     <a href="papers/conf-sas-BouajjaniEP11.pdf">On Sequentializing Concurrent Programs</a>
                 </span>
-                <span class="rhs"><abbr>SAS</abbr> ’11</span>
+                <span class="rhs"><abbr>SAS</abbr>&nbsp;’11</span>
               </div>
             </div>
             <div class="item">
@@ -273,7 +274,7 @@
                 <span class="lhs">
                     <a href="papers/conf-popl-EmmiQR11.pdf">Delay-Bounded Scheduling</a>
                 </span>
-                <span class="rhs"><abbr>POPL</abbr> ’11</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’11</span>
               </div>
             </div>
             <div class="item">
@@ -281,7 +282,7 @@
                 <span class="lhs">
                     <a href="papers/conf-pldi-EmmiMM10.pdf">Parameterized Verification of Transactional Memories</a>
                 </span>
-                <span class="rhs"><abbr>PLDI</abbr> ’10</span>
+                <span class="rhs"><abbr>PLDI</abbr>&nbsp;’10</span>
               </div>
             </div>
             <div class="item">
@@ -289,7 +290,7 @@
                 <span class="lhs">
                     <a href="papers/conf-tacas-EmmiJKM09.pdf">Verifying Reference Counting Implementations</a>
                 </span>
-                <span class="rhs"><abbr>TACAS</abbr> ’09</span>
+                <span class="rhs"><abbr>TACAS</abbr>&nbsp;’09</span>
               </div>
             </div>
             <div class="item">
@@ -297,7 +298,7 @@
                 <span class="lhs">
                     <a href="papers/conf-fm-EmmiGP08.pdf">Assume-Guarantee Verification for Interface Automata</a>
                 </span>
-                <span class="rhs"><abbr>FM</abbr> ’08</span>
+                <span class="rhs"><abbr>FM</abbr>&nbsp;’08</span>
               </div>
             </div>
             <div class="item">
@@ -305,7 +306,7 @@
                 <span class="lhs">
                     <a href="papers/conf-pldi-ChenHPECCP08.pdf">Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers</a>
                 </span>
-                <span class="rhs"><abbr>PLDI</abbr> ’08</span>
+                <span class="rhs"><abbr>PLDI</abbr>&nbsp;’08</span>
               </div>
             </div>
             <div class="item">
@@ -313,7 +314,7 @@
                 <span class="lhs">
                     <a href="papers/conf-sandbox-WangEF07.pdf">Assembling an Expressive Facial Animation System</a>
                 </span>
-                <span class="rhs">Sandbox ’07</span>
+                <span class="rhs">Sandbox&nbsp;’07</span>
               </div>
             </div>
             <div class="item">
@@ -321,7 +322,7 @@
                 <span class="lhs">
                     <a href="papers/conf-issta-EmmiMS07.pdf">Dynamic Test Input Generation for Database Applications</a>
                 </span>
-                <span class="rhs"><abbr>ISSTA</abbr> ’07</span>
+                <span class="rhs"><abbr>ISSTA</abbr>&nbsp;’07</span>
               </div>
             </div>
             <div class="item">
@@ -329,7 +330,7 @@
                 <span class="lhs">
                     <a href="papers/conf-vmcai-EmmiM07.pdf">Verifying Compensating Transactions</a>
                 </span>
-                <span class="rhs"><abbr>VMCAI</abbr> ’07</span>
+                <span class="rhs"><abbr>VMCAI</abbr>&nbsp;’07</span>
               </div>
             </div>
             <div class="item">
@@ -337,7 +338,7 @@
                 <span class="lhs">
                     <a href="papers/conf-popl-EmmiFJM07.pdf">Lock Allocation</a>
                 </span>
-                <span class="rhs"><abbr>POPL</abbr> ’07</span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’07</span>
               </div>
             </div>
             <div class="item">
@@ -345,7 +346,7 @@
                 <span class="lhs">
                     <a href="papers/conf-hscc-EmmiM06.pdf">Decision Problems for the Verification of Real-Time Software</a>
                 </span>
-                <span class="rhs"><abbr>HSCC</abbr> ’06</span>
+                <span class="rhs"><abbr>HSCC</abbr>&nbsp;’06</span>
               </div>
             </div>
         </section>
@@ -364,7 +365,7 @@
                   <a href="https://github.com/smackers/smack"><abbr>SMACK</abbr></a>
                 </span>
               </div>
-              <div class="info"><abbr>SV-COMP ’15</abbr> award-winning bounded software verifier for C programs.
+              <div class="info"><abbr>SV-COMP&nbsp;’15</abbr> award-winning bounded software verifier for C programs.
 </div>
             </div>
             <div class="item">
@@ -373,7 +374,7 @@
                   <a href="https://github.com/imdea-software/violin">Violin</a>
                 </span>
               </div>
-              <div class="info">efficient algorithms for checking observational refinement.
+              <div class="info">efficient symbolic reasoning algorithms for checking linearizability of concurrent data structures.
 </div>
             </div>
             <div class="item">
@@ -382,7 +383,7 @@
                   <a href="https://github.com/michael-emmi/c2s">c2s</a>
                 </span>
               </div>
-              <div class="info">concurrent to sequential program translations (sequentializations).
+              <div class="info">program “sequentializations” for reducing bounded concurrent program verification to sequential program verification.
 </div>
             </div>
             <div class="item">
